[package]
name = "hir-cosim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
libc = "0.2.153"
libloading = "0.8.1"
numpy = "0.20.0"
ordinal = "0.3.2"
pyo3 = { version = "0.20.2", features = ["auto-initialize"] }
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
toml = "0.8.10"
